fixed alignment fr fr this time

--- a/public/chat.css
+++ b/public/chat.css
@@ -1,6 +1,8 @@
-body {
+main {
+    flex: 1 calc(100vh - 110px);
+    display: block;
     align-items: left;
-    flex-direction: none;
+    justify-content: none;
 }
 
 #chat-text {
